# iris-neural-network

./: app.py  config.py  lib.py  pyproject.toml  test_app.py  training.py
